# LearnOpenCV

./: README.md
C++_learning/: duotai  duotai.cpp  reference_and_pointer.cpp
Homography/: CMakeLists.txt  virtual-billboard.cpp
inpaint/: CMakeLists.txt  inpaint.cpp  inpaint.h  test.cpp
kinfu/: CMakeLists.txt  io_utils.hpp  kinfu_demo.cpp
question_1-10/: README.md
question_1-10/answer_1-10/: CMakeLists.txt  question_1.cpp  question_10.cpp  question_2.cpp  question_3.cpp  question_4.cpp  question_5.cpp  question_6.cpp  question_7.cpp  question_8.cpp  question_9.cpp  test.cpp
question_11-20/: README.md
question_11-20/answer_11-20/: CMakeLists.txt  question11.cpp  question12.cpp  question13.cpp  question14.cpp  question15.cpp  question16.cpp  question17.cpp  question18.cpp  question19.cpp  question20.cpp  test.cpp
question_21-30/: CMakeLists.txt  README.md  question21.cpp  question22.cpp  question23.cpp  question24.cpp  question25.cpp  question26.cpp
